--- a/assets/css/blocks/footer.scss
+++ b/assets/css/blocks/footer.scss
@@ -1,212 +1,248 @@
 .footer {
-	display: grid;
-	gap: 0;
+  display: grid;
+  gap: 0;
 
-	.footer-top {
-		width: 100%;
-		padding: 8.65em 7.35vw 7.35em;
-		background: var(--wp--preset--color--pink-red);
-		color: #fff;
-		display: flex;
-		flex-direction: column;
-		align-items: stretch !important;
-		gap: 1em;
+  .footer-top {
+    width: 100%;
+    padding: 6.65em 7.35vw 6.65em 7.35em;
+    background: var(--wp--preset--color--pink-red);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch !important;
+    gap: 1em;
 
-		@media screen and (min-width: 960px) {
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-			padding: 8.65em 7.35em 7.35em;
-		}
+    @media screen and (min-width: 960px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      padding: 4.65em 7.35vw 2.65em 7.35em !important;
+    }
 
-		h2 {
-			font-size: 2em;
-			font-weight: 700;
-			text-transform: none;
-			margin-bottom: 3.15rem;
-		}
+    h2 {
+      font-size: 2em;
+      font-weight: 700;
+      text-transform: none;
+      margin-bottom: 1.25rem !important;
+    }
 
-		>div.wp-block-group {
-			display: flex;
-			height: 100%;
-			flex-direction: column;
-			align-items: flex-start;
+    > div.wp-block-group {
+      display: flex;
+      height: 100%;
+      flex-direction: column;
+      align-items: flex-start;
 
-			>* {
-				margin-left: 0 !important;
-			}
-		}
+      > * {
+        margin-left: 0 !important;
+      }
+    }
 
-		.footer-top-right {
-			p {
-				margin: 0;
-				margin-bottom: 2.5rem;
-				line-height: 1.5;
+    .footer-top-right {
+      p {
+        margin: 0;
+        margin-bottom: 2.5rem;
+        line-height: 1.5;
 
-				a {
-					text-decoration: none;
-					color: #fff;
-					line-height: 1.9;
-					position: relative;
+        a {
+          position: relative;
+          text-decoration: none;
+          color: #fff;
+          line-height: 1.4;
+          cursor: pointer;
 
-					&:after {
-						position: absolute;
-						bottom: -2px;
-						left: 0;
-						content: "";
-						background: #fff;
-						height: 1px;
-						width: 0;
-						transition: all 0.3s ease-in-out;
-					}
+          &:after {
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            content: "";
+            background: #fff;
+            height: 1px;
+            width: 0;
+            transition: all 0.3s ease-in-out;
+          }
 
-					&:hover {
-						&:after {
-							width: 100%;
-						}
-					}
-				}
-			}
-		}
+          &:hover {
+            &:after {
+              width: 100%;
+            }
+          }
+        }
 
-		form.wpcf7-form {
-			display: grid;
-			max-width: 100%;
-			width: 100%;
+        &.button {
+          a {
+            color: #282626 !important;
+            padding: 27px 32px !important;
+            font-weight: 600 !important;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+            width: auto;
+            background-color: #ffffff;
+            max-width: 18rem;
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            font-size: 0.8rem;
+            &::after {
+              display: none;
+            }
+            &:hover {
+              background-color: #282626;
+              color: #ffffff !important;
+            }
 
-			@media screen and (min-width: 960px) {
-				max-width: 75%;
-			}
+            @media screen and (max-width: 959px) {
+              margin: 0 auto;
+            }
+          }
+        }
+      }
+    }
 
-			input.wpcf7-form-control {
-				&:not(input[type="submit"]) {
-					width: 100%;
-					background: transparent;
-					border: none;
-					border-bottom: 1px solid #fff;
-					color: #fff;
-					font-size: 0.8em;
-					padding-bottom: 0.85em;
-					margin-bottom: 1.5em;
+    form.wpcf7-form {
+      display: grid;
+      max-width: 100%;
+      width: 100%;
 
-					&::placeholder {
-						color: #fff;
-					}
-				}
+      @media screen and (min-width: 960px) {
+        max-width: 75%;
+      }
 
-				&:focus {
-					outline: none;
-					box-shadow: none;
-				}
-			}
+      input.wpcf7-form-control {
+        &:not(input[type="submit"]) {
+          width: 100%;
+          background: transparent;
+          border: none;
+          border-bottom: 1px solid #fff;
+          color: #fff;
+          font-size: 0.8em;
+          padding-bottom: 0.85em;
+          margin-bottom: 1.5em;
 
-			textarea {
-				width: 100%;
-				background: transparent;
-				border: none;
-				border-bottom: 1px solid #fff;
-				color: #fff;
-				font-size: 0.8em;
-				padding-bottom: 0.85em;
-				margin-bottom: 1.5em;
-				height: 9em;
+          &::placeholder {
+            color: #fff;
+          }
+        }
 
-				&:focus {
-					outline: none;
-					box-shadow: none;
-				}
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
+      }
 
-				&::placeholder {
-					color: #fff;
-				}
-			}
+      textarea {
+        width: 100%;
+        background: transparent;
+        border: none;
+        border-bottom: 1px solid #fff;
+        color: #fff;
+        font-size: 0.8em;
+        padding-bottom: 0.85em;
+        margin-bottom: 1.5em;
+        height: 9em;
+        padding-top: 0 !important;
 
-			input[type="submit"] {
-				letter-spacing: 2px;
-				text-transform: uppercase;
-				color: #ffffff;
-				font-weight: 700;
-				background: #373634;
-				border: none;
-				padding: 1.4rem 2rem;
-				max-width: 18rem;
-				font-size: 0.8rem;
-				cursor: pointer;
-				border: 1px solid #373634;
-				transition: all 0.3s ease-in-out;
-				margin-top: 3.15rem;
-				border-radius: 0;
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
 
-				&:hover {
-					background: #ed1849;
-					color: #fff;
-					border-color: #fff;
-				}
+        &::placeholder {
+          color: #fff;
+        }
+      }
 
-				&:focus {
-					outline: none;
-					box-shadow: none;
-				}
-			}
+      input[type="submit"] {
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        color: #282626;
+        font-weight: 700;
+        background: #ffffff;
+        border: none;
+        padding: 1.4rem 2rem;
+        max-width: 18rem;
+        font-size: 0.8rem;
+        cursor: pointer;
+        border: 1px solid #ffffff;
+        transition: all 0.3s ease-in-out;
+        margin-top: 3.15rem;
+        border-radius: 0;
+        font-weight: 600 !important;
 
-			span.wpcf7-not-valid-tip {
-				color: #fff;
-				margin-bottom: 0.5rem;
-			}
-		}
+        &:hover {
+          background: #282626;
+          color: #fff;
+          border: 1px solid #282626 !important;
+        }
 
-		.wp-block-contact-form-7-contact-form-selector {
-			width: 100%;
-			max-width: 100% !important;
-		}
-	}
+        &:focus {
+          outline: none;
+          box-shadow: none;
+        }
+      }
 
-	.footer-bottom {
-		width: 100%;
-		background: var(--wp--preset--color--pink-red);
-		display: grid;
-		align-items: center;
-		justify-content: center;
-		color: #fff;
-		padding: 3.05em 7.35vw;
-		padding-top: 0;
-		transform: translateY(-1px);
+      span.wpcf7-not-valid-tip {
+        color: #fff;
+        margin-bottom: 0.5rem;
+      }
+    }
 
-		@media screen and (min-width: 960px) {
-			padding: 3.05em 7.35em;
-			justify-content: space-between;
-			grid-template-columns: max-content auto;
-		}
+    .wp-block-contact-form-7-contact-form-selector {
+      width: 100%;
+      max-width: 100% !important;
+    }
+  }
 
-		p {
-			opacity: 0.3;
-			font-size: 0.7em;
+  .footer-bottom {
+    width: 100%;
+    background: var(--wp--preset--color--pink-red);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    padding: 1.75em 7.35vw;
+    padding-top: 0;
+    transform: translateY(-1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 
-			@media screen and (max-width: 960px) {
-				text-align: center;
-			}
+    @media screen and (min-width: 960px) {
+      padding: 1.75em 7.35em;
+      justify-content: space-between;
+      grid-template-columns: max-content auto;
+    }
 
-			a {
-				color: inherit;
-				text-decoration: none;
-				position: relative;
+    p {
+      opacity: 0.3;
+      font-size: 0.7em;
 
-				&:after {
-					content: "";
-					background: #fff;
-					bottom: -1px;
-					width: 0;
-					position: absolute;
-					left: 0;
-					height: 1px;
-					transition: all 0.3s ease-in-out;
-				}
+      @media screen and (max-width: 960px) {
+        text-align: center;
+      }
 
-				&:hover {
-					&:after {
-						width: 100%;
-					}
-				}
-			}
-		}
-	}
+      a {
+        color: inherit;
+        text-decoration: none;
+        position: relative;
+
+        &:after {
+          content: "";
+          background: #fff;
+          bottom: -1px;
+          width: 0;
+          position: absolute;
+          left: 0;
+          height: 1px;
+          transition: all 0.3s ease-in-out;
+        }
+
+        &:hover {
+          &:after {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
 }
