--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,6 @@
 /* 3rd party packages */
 @import "/node_modules/@fortawesome/fontawesome-pro/css/all.css";
-@import 'modern-normalize.min.css';
+@import "modern-normalize.min.css";
 
 /* Document
    ========================================================================== */
@@ -11,66 +11,141 @@
  */
 
 html {
-	visibility: hidden;
-	font-size: 13px;
+  visibility: hidden;
+  font-size: 13px;
 }
 
 @media screen and (min-width: 960px) {
-	button.menu-toggle {
-		display: none;
-	}
+  button.menu-toggle {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 960px) {
-	html {
-		/* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
-		// font-size: clamp(10px, calc(10px + 3 * ((100vw - 1000px) / 700)), 16px);
-		font-size: calc(13px + 3*(100vw - 1000px) / 900);
-	}
+  html {
+    /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
+    // font-size: clamp(10px, calc(10px + 3 * ((100vw - 1000px) / 700)), 16px);
+    font-size: calc(13px + 3 * (100vw - 1000px) / 900);
+  }
 }
 
 @media screen and (min-width: 1900px) {
-	html {
-		font-size: 20px;
-	}
+  html {
+    font-size: 20px;
+  }
 }
 
 p {
-	letter-spacing: 1px;
-	font-weight: 400;
+  letter-spacing: 1px;
+  font-weight: 400;
 }
 
 a.wp-block-button__link {
-	background: transparent;
-	color: #ffffff;
-	font-weight: 700;
-	font-size: 1em;
-	padding: 1.4625em 3.2em;
-	border: 1px solid;
-	border-radius: 0;
-	line-height: 1.24;
-	text-transform: uppercase;
-	transition: all 0.3s ease-in-out;
+  background: transparent;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 0.8em;
+  padding: 1.4625em 3.2em;
+  border: 1px solid;
+  border-radius: 0;
+  line-height: 1.3;
+  text-transform: uppercase;
+  transition: all 0.3s ease-in-out;
 
-	@media screen and (min-width: 960px) {
-		min-width: 22.5em;
-	}
+  @media screen and (min-width: 960px) {
+    min-width: 22.5em;
+  }
 
-	&:hover {
-		background: #fff !important;
-		color: #ed1849;
-		border-color: #ed1849;
-	}
+  &:hover {
+    background: #fff !important;
+    color: #282626;
+    border-color: #ed1849;
+  }
+}
+
+.wp-block-buttons {
+  &.black {
+    a.wp-block-button__link {
+      background: transparent;
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 0.8em;
+      padding: 1.4625em 3.2em;
+      border: 1px solid;
+      border-radius: 0;
+      line-height: 1.3;
+      text-transform: uppercase;
+      transition: all 0.3s ease-in-out;
+
+      @media screen and (min-width: 960px) {
+        min-width: 22.5em;
+      }
+
+      &:hover {
+        color: #ffffff !important;
+        border-color: #282626;
+        background: #282626 !important;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 960px) {
-	.desktop-only {
-		display: none !important;
-	}
+  .desktop-only {
+    display: none !important;
+  }
 }
 
 @media screen and (min-width: 960px) {
-	.mobile-only {
-		display: none !important;
-	}
+  .mobile-only {
+    display: none !important;
+  }
+}
+
+.two_blocks {
+  margin-top: 7em;
+  .columns {
+    gap: 9em;
+    .left {
+      figure {
+        margin: 0 0 0em;
+        img {
+          max-width: 100%;
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+
+    .right {
+      justify-self: flex-start;
+      text-align: left;
+
+      @media screen and (max-width: 1540px) {
+        flex-basis: 33% !important;
+      }
+      .wp-block-buttons {
+        &.black {
+          margin-top: 3em;
+        }
+      }
+
+      p {
+        letter-spacing: 0;
+      }
+    }
+  }
+
+  @media (max-width: 1100px) {
+    .wp-block-columns {
+      flex-wrap: wrap !important;
+    }
+    .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
+      flex-basis: 100% !important;
+    }
+  }
+}
+
+.d-none {
+  display: none !important;
 }
