--- a/assets/css/blocks/banner_small.scss
+++ b/assets/css/blocks/banner_small.scss
@@ -22,6 +22,7 @@
       display: flex;
       width: 100%;
       height: 100%;
+      margin: 0;
       &::after {
         content: "";
         position: absolute;
