--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -103,7 +103,7 @@ a.wp-block-button__link {
 }
 
 .two_blocks {
-  margin-top: 7em;
+  padding-top: 7em;
   .columns {
     gap: 9em;
     @media screen and (max-width: 781px) {
@@ -131,6 +131,11 @@ a.wp-block-button__link {
         &.black {
           margin-top: 3em;
         }
+      }
+      h4 {
+        font-size: 1.66em;
+        font-weight: 600;
+        margin-bottom: 1em;
       }
 
       p {
@@ -195,15 +200,20 @@ a.wp-block-button__link {
       justify-content: space-between;
       margin-bottom: 0;
       padding-top: 5.2em;
-      padding-bottom: 7.2em;
+      padding-bottom: 3.2em;
       padding-left: 4em;
       padding-right: 4em;
       gap: 6.8em;
-      .left {
+      .wp-block-column {
         position: relative;
 
         p {
           margin-bottom: 2em;
+        }
+
+        h4 {
+          font-size: 1.66em;
+          font-weight: 600;
         }
 
         ul {
@@ -213,13 +223,44 @@ a.wp-block-button__link {
           padding-left: 0.9em;
           padding-right: 8em;
           gap: 1em;
-          li {
-          }
         }
       }
-      .right {
-        position: relative;
+    }
+
+    .button {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top: 1px solid rgba(255, 255, 255, 0.3);
+      padding-top: 3.2em;
+      padding-bottom: 1.95em;
+      a.wp-block-button__link {
+        background: #ffffff !important;
+        color: #282626;
+        font-weight: 700;
+        font-size: 0.8em;
+        padding: 1.4625em 3.2em;
+        border: 1px solid #ffffff;
+        border-radius: 0;
+        line-height: 1.3;
+        text-transform: uppercase;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+          background: #282626 !important;
+          color: #ffffff;
+          border-color: #282626;
+        }
       }
+    }
+  }
+  @media (max-width: 1100px) {
+    .wp-block-columns {
+      flex-wrap: wrap !important;
+    }
+    .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
+      flex-basis: 100% !important;
     }
   }
 }
@@ -297,4 +338,227 @@ a.wp-block-button__link {
   max-width: 1160px;
   width: 100%;
   margin-top: 2em;
+}
+
+.halfhalf3 {
+  position: relative;
+  background: linear-gradient(to top, #f0f3f5 80%, #ffffff 20%);
+  .box_inside {
+    position: relative;
+    .columns {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 0;
+      padding-top: 5.2em;
+      padding-bottom: 3.2em;
+      padding-left: 4em;
+      padding-right: 4em;
+      gap: 4.8em;
+      .wp-block-column {
+        position: relative;
+
+        h4 {
+          font-size: 1.66em;
+          font-weight: 600;
+        }
+
+        p {
+          margin-bottom: 2em;
+        }
+
+        ul {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          padding-left: 0.9em;
+          padding-right: 8em;
+          gap: 1em;
+        }
+      }
+    }
+
+    .button {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-top: 1px solid rgba(255, 255, 255, 0.3);
+      padding-top: 3.2em;
+      padding-bottom: 1.95em;
+      a.wp-block-button__link {
+        background: #ffffff !important;
+        color: #282626;
+        font-weight: 700;
+        font-size: 0.8em;
+        padding: 1.4625em 3.2em;
+        border: 1px solid #ffffff;
+        border-radius: 0;
+        line-height: 1.3;
+        text-transform: uppercase;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+          background: #282626 !important;
+          color: #ffffff;
+          border-color: #282626;
+        }
+      }
+    }
+  }
+  @media (max-width: 1100px) {
+    .wp-block-columns {
+      flex-wrap: wrap !important;
+    }
+    .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
+      flex-basis: 100% !important;
+    }
+  }
+}
+
+.two_blocks_2 {
+  padding-top: 7em;
+  padding-bottom: 5em;
+  .columns {
+    gap: 9em;
+    @media screen and (max-width: 781px) {
+      gap: 6em;
+    }
+    .left {
+      figure {
+        margin: 0 0 0em;
+        img {
+          max-width: 100%;
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+
+    .right {
+      justify-self: flex-start;
+      text-align: left;
+
+      @media screen and (max-width: 1540px) {
+        flex-basis: 33% !important;
+      }
+      .wp-block-buttons {
+        &.black {
+          margin-top: 3em;
+        }
+      }
+
+      h4 {
+        font-size: 1.66em;
+        font-weight: 600;
+        margin-bottom: 1em;
+      }
+
+      p {
+        letter-spacing: 0;
+        margin: 0;
+        margin-bottom: 2em;
+      }
+
+      ul {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding-left: 0.9em;
+        padding-right: 8em;
+        gap: 1em;
+        li::marker {
+          color: #ed1849;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1100px) {
+    .wp-block-columns {
+      flex-wrap: wrap !important;
+    }
+    .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
+      flex-basis: 100% !important;
+    }
+  }
+}
+
+.three_columns {
+  position: relative;
+  padding-top: 5em;
+  padding-bottom: 5em;
+
+  .wp-block-columns {
+    .wp-block-column {
+      figure {
+        position: relative;
+        max-width: 512px;
+        width: 100%;
+        height: auto;
+        margin-bottom: 3em;
+        @media (max-width: 1100px) {
+          max-width: 100%;
+        }
+        img {
+          display: block;
+          max-width: 100%;
+          height: auto;
+          @media (max-width: 1100px) {
+            width: 100%;
+          }
+        }
+      }
+
+      h4 {
+        font-size: 1.66em;
+        font-weight: 600;
+        margin-bottom: 1em;
+      }
+
+      p {
+        letter-spacing: 0;
+        margin: 0;
+        margin-bottom: 2em;
+      }
+
+      ul {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding-left: 0.9em;
+        padding-right: 8em;
+        gap: 1em;
+        li::marker {
+          color: #ed1849;
+        }
+      }
+    }
+  }
+  @media (max-width: 1100px) {
+    .wp-block-columns {
+      flex-wrap: wrap !important;
+    }
+    .wp-block-columns:not(.is-not-stacked-on-mobile) > .wp-block-column {
+      flex-basis: 100% !important;
+    }
+  }
+}
+
+:where(.editor-styles-wrapper)
+  .banner_small
+  .title_button
+  .logo_title
+  figure.wp-block-image.hero-decor {
+  width: auto !important;
+}
+
+:where(.editor-styles-wrapper) .banner_small .title_button .logo_title p {
+  display: flex;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  overflow-wrap: unset;
+  white-space: unset !important;
 }
