--- a/assets/css/blocks/careers.scss
+++ b/assets/css/blocks/careers.scss
@@ -45,18 +45,18 @@
         border-top: 2px solid #ed1849;
       }
 
-      &:hover {
-        background-color: #ed1849;
-        h3 {
-          color: #ffffff;
-        }
+      // &:hover {
+      //   background-color: #ed1849;
+      //   h3 {
+      //     color: #ffffff;
+      //   }
 
-        svg {
-          * {
-            fill: #ffffff;
-          }
-        }
-      }
+      //   svg {
+      //     * {
+      //       fill: #ffffff;
+      //     }
+      //   }
+      // }
     }
   }
 }
