--- a/assets/css/blocks/hero.scss
+++ b/assets/css/blocks/hero.scss
@@ -39,7 +39,7 @@ section.hero {
       @media screen and (min-width: 960px) {
         padding: 0 3em 4.5em;
         background: #ed1849;
-        margin-right: 7.65625%;
+        margin-right: 6.65625%;
         // max-width: 27.6041667%;
         max-width: 26.4em;
       }
@@ -77,6 +77,10 @@ section.hero {
         // @media screen and (min-width: 1900px) {
         //     font-size: 2.5em;
         // }
+      }
+      .wp-block-button {
+        position: relative;
+        width: 100%;
       }
 
       a.wp-block-button__link {
@@ -144,7 +148,7 @@ section.hero {
 
     .swiper-slide {
       @media screen and (min-width: 960px) {
-        padding-left: 7.5%;
+        padding-left: 6.9%;
       }
 
       img {
