--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,7 +45,7 @@ a.wp-block-button__link {
   color: #ffffff;
   font-weight: 700;
   font-size: 0.8em;
-  padding: 1.4625em 3.2em;
+  padding: 1.8925em 3.2em;
   border: 1px solid;
   border-radius: 0;
   line-height: 1.3;
@@ -71,7 +71,7 @@ a.wp-block-button__link {
       font-weight: 700;
       font-size: 0.8em;
       padding: 1.4625em 3.2em;
-      border: 1px solid;
+      border: 2px solid #282626;
       border-radius: 0;
       line-height: 1.3;
       text-transform: uppercase;
@@ -103,7 +103,23 @@ a.wp-block-button__link {
 }
 
 .two_blocks {
+  position: relative;
   padding-top: 7em;
+  hr.wp-block-separator {
+    position: absolute;
+    top: 22%; // altura desde el bottom del contenedor
+    right: 0; // inicia desde el borde izquierdo
+    width: 36% !important; // ancho de la línea
+    border: none; // quitar estilo default
+    border-bottom: 2px solid #ed1849; // línea roja
+    z-index: 10;
+    @media screen and (max-width: 1300px) {
+      top: 16%;
+    }
+    @media screen and (max-width: 1100px) {
+      display: none;
+    }
+  }
   .columns {
     gap: 9em;
     @media screen and (max-width: 781px) {
@@ -204,6 +220,12 @@ a.wp-block-button__link {
       padding-left: 4em;
       padding-right: 4em;
       gap: 6.8em;
+
+      @media (max-width: 1100px) {
+        padding-left: 0em;
+        padding-right: 0em;
+        gap: 4.8em;
+      }
       .wp-block-column {
         position: relative;
 
@@ -223,6 +245,13 @@ a.wp-block-button__link {
           padding-left: 0.9em;
           padding-right: 8em;
           gap: 1em;
+          @media (max-width: 1100px) {
+            padding-right: 0em;
+          }
+
+          li {
+            font-size: 16px !important;
+          }
         }
       }
     }
@@ -235,6 +264,15 @@ a.wp-block-button__link {
       border-top: 1px solid rgba(255, 255, 255, 0.3);
       padding-top: 3.2em;
       padding-bottom: 1.95em;
+      .wp-block-buttons {
+        position: relative;
+        max-width: 381px;
+        width: 100%;
+        .wp-block-button {
+          position: relative;
+          width: 100%;
+        }
+      }
       a.wp-block-button__link {
         background: #ffffff !important;
         color: #282626;
@@ -327,6 +365,9 @@ a.wp-block-button__link {
         padding-left: 0.9em;
         padding-right: 0em;
         gap: 1em;
+        @media (max-width: 1100px) {
+          padding-right: 0em;
+        }
         li::marker {
           color: #ed1849;
         }
@@ -391,6 +432,9 @@ a.wp-block-button__link {
           padding-left: 0.9em;
           padding-right: 8em;
           gap: 1em;
+          @media (max-width: 1100px) {
+            padding-right: 0em;
+          }
         }
       }
     }
@@ -485,6 +529,14 @@ a.wp-block-button__link {
         padding-left: 0.9em;
         padding-right: 8em;
         gap: 1em;
+
+        @media (max-width: 1650px) {
+          padding-right: 2em;
+        }
+
+        @media (max-width: 1100px) {
+          padding-right: 0em;
+        }
         li::marker {
           color: #ed1849;
         }
@@ -547,6 +599,9 @@ a.wp-block-button__link {
         padding-left: 0.9em;
         padding-right: 8em;
         gap: 1em;
+        @media (max-width: 1100px) {
+          padding-right: 0em;
+        }
         li::marker {
           color: #ed1849;
         }
@@ -612,7 +667,8 @@ a.wp-block-button__link {
 }
 
 .max_widthv2 {
-  max-width: 1134px;
+  // max-width: 1134px;
+  max-width: 59.06vw;
   width: 100%;
 }
 
@@ -682,13 +738,19 @@ a.wp-block-button__link {
   }
   .wp-block-columns {
     .wp-block-column {
+      p.title {
+        margin-bottom: 1.56em;
+      }
       ul {
         position: relative;
         display: flex;
         flex-direction: column;
         padding-left: 0.9em;
-        padding-right: 8em;
+        padding-right: 4em;
         gap: 1em;
+        @media (max-width: 1100px) {
+          padding-right: 0em;
+        }
         li::marker {
           color: #ed1849;
         }
