--- a/assets/css/blocks/header.scss
+++ b/assets/css/blocks/header.scss
@@ -11,11 +11,13 @@ header {
 .header-main {
   position: relative;
   display: grid;
-  padding: 3.4em 7vw;
+  padding: 2.8em 7vw;
   background: #fff;
 
+  border-top: 10px solid #ed1849;
+
   @media screen and (min-width: 960px) {
-    padding: 3.4em 7.3em;
+    padding: 2.5em 7.3em;
   }
 
   .header-line {
@@ -138,7 +140,7 @@ header {
                     span {
                       color: #ffffff !important;
                       text-transform: capitalize !important;
-                      font-weight: 600 !important;
+                      font-weight: 500 !important;
                       width: 100%;
                       text-align: center;
                       transition: color 0.3s ease-in-out;
@@ -150,7 +152,7 @@ header {
 
                     &:hover {
                       span {
-                        color: #ffffffc7 !important;
+                        color: rgba(255, 255, 255, 0.7) !important;
                       }
                     }
 
@@ -159,7 +161,7 @@ header {
                       height: 1px;
                       position: absolute;
                       content: "";
-                      background: #fff !important;
+                      background: rgba(255, 255, 255, 0.3) !important;
                       left: 0;
                       bottom: 0;
                       &:last-of-type {
@@ -199,7 +201,6 @@ header {
 .header-mobile-nav {
   position: absolute;
   height: 0;
-  overflow: hidden;
   pointer-events: none;
   width: 100%;
   background: #fff;
@@ -208,8 +209,49 @@ header {
   align-items: start;
   font-size: 2em;
 
+  max-height: 100vh;
+  overflow: hidden; // cerrado
+  overflow-y: auto;
   nav {
     margin: 3em 10vw;
+    width: 100%;
+
+    max-height: unset; // resta el margin
+    height: auto;
+
+    ul {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      justify-content: flex-start;
+
+      li {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        a {
+          text-align: center;
+        }
+
+        &.has-child {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          ul {
+            width: 100% !important;
+            row-gap: 20px !important;
+            left: 0px !important;
+            position: relative !important;
+            left: unset !important;
+            top: unset !important;
+
+            li {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
