--- a/assets/css/blocks/popup_carreire.scss
+++ b/assets/css/blocks/popup_carreire.scss
@@ -158,6 +158,7 @@
 
             &:focus {
               outline: none !important;
+              box-shadow: none !important;
             }
           }
         }
