--- a/assets/css/blocks/header.scss
+++ b/assets/css/blocks/header.scss
@@ -244,6 +244,7 @@ header {
             position: relative !important;
             left: unset !important;
             top: unset !important;
+            border: none !important;
 
             li {
               width: 100%;
