--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -397,6 +397,13 @@ a.wp-block-button__link {
   margin-top: 2em;
 }
 
+.max_widthv3 {
+  max-width: 1160px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 2em;
+}
+
 .halfhalf3 {
   position: relative;
   background: linear-gradient(to top, #f0f3f5 80%, #ffffff 20%);
@@ -527,7 +534,8 @@ a.wp-block-button__link {
         display: flex;
         flex-direction: column;
         padding-left: 0.9em;
-        padding-right: 8em;
+        padding-right: 2em;
+        margin-bottom: 2em;
         gap: 1em;
 
         @media (max-width: 1650px) {
