--- a/assets/css/blocks/hero.scss
+++ b/assets/css/blocks/hero.scss
@@ -39,9 +39,15 @@ section.hero {
       @media screen and (min-width: 960px) {
         padding: 0 3em 8em;
         background: #ed1849;
-        margin-right: 6.65625%;
+        margin-right: 4.65625%;
         // max-width: 27.6041667%;
         max-width: 30.4em;
+      }
+
+      /* ⬇️ pantallas menores a 1600px */
+      @media screen and (max-width: 1600px) {
+        max-width: 32em;
+        margin-right: 6.5em;
       }
 
       @media screen and (min-width: 2000px) {
@@ -114,23 +120,46 @@ section.hero {
 
   figure.wp-block-image.hero-decor {
     position: absolute;
-    width: 9em;
-    top: 87%;
+    width: 7%;
+    left: 2em;
+    bottom: 10vh;
+    top: unset;
+    right: unset;
     z-index: 3;
-    right: 0;
     opacity: 0;
     visibility: hidden;
+  }
 
-    @media screen and (min-width: 650px) {
-      right: 1em;
-    }
-
-    @media screen and (min-width: 960px) {
+  /* <= 960px */
+  @media screen and (max-width: 1600px) {
+    figure.wp-block-image.hero-decor {
       width: 7%;
-      left: 3.5%;
-      bottom: 10vh;
-      top: unset;
-      right: unset;
+      left: 2.1em;
+    }
+  }
+
+  @media screen and (max-width: 1300px) {
+    figure.wp-block-image.hero-decor {
+      width: 8%;
+      left: 2.1em;
+    }
+  }
+
+  @media screen and (max-width: 1100px) {
+    figure.wp-block-image.hero-decor {
+      width: 10%;
+      left: 2.1em;
+    }
+  }
+
+  /* <= 650px */
+  @media screen and (max-width: 960px) {
+    figure.wp-block-image.hero-decor {
+      width: 9em;
+      top: 87%;
+      right: 1em;
+      left: unset;
+      bottom: unset;
     }
   }
 
@@ -147,8 +176,13 @@ section.hero {
     }
 
     .swiper-slide {
-      @media screen and (min-width: 960px) {
-        padding-left: 6.9%;
+      padding-left: 5.6em;
+
+      @media screen and (max-width: 1600px) {
+        padding-left: 6.2em;
+      }
+      @media screen and (max-width: 960px) {
+        padding-left: 6em;
       }
 
       img {
