--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,8 +44,8 @@ a.wp-block-button__link {
   background: transparent;
   color: #ffffff;
   font-weight: 700;
-  font-size: 0.8em;
-  padding: 1.8925em 3.2em;
+  font-size: 15px;
+  padding: 28px 3.2em;
   border: 1px solid;
   border-radius: 0;
   line-height: 1.3;
@@ -113,6 +113,10 @@ a.wp-block-button__link {
     border: none; // quitar estilo default
     border-bottom: 2px solid #ed1849; // línea roja
     z-index: 10;
+
+    @media screen and (max-width: 1600px) {
+      width: 34% !important; // ancho de la línea
+    }
     @media screen and (max-width: 1300px) {
       top: 16%;
     }
@@ -205,7 +209,7 @@ a.wp-block-button__link {
 }
 .deuxblocksv3 {
   position: relative;
-  padding-left: 7vw;
+  padding-left: 6vw;
   @media screen and (max-width: 960px) {
     padding-right: 7vw;
   }
